--- a/Learning/05b_Matplotlib_Seaborn.ipynb
+++ b/Learning/05b_Matplotlib_Seaborn.ipynb
@@ -2237,6 +2237,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Syntax\n",
+    "seaborn.scatterplot(data=None, *, x=None, y=None, hue=None, size=None, style=None, palette=None, hue_order=None, hue_norm=None, sizes=None, size_order=None, size_norm=None, markers=True, style_order=None, legend='auto', ax=None, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters:\n",
+    "datapandas.DataFrame, numpy.ndarray, mapping, or sequence\n",
+    "Input data structure. Either a long-form collection of vectors that can be assigned to named variables or a wide-form dataset that will be internally reshaped.\n",
+    "\n",
+    "x, yvectors or keys in data\n",
+    "Variables that specify positions on the x and y axes.\n",
+    "\n",
+    "huevector or key in data\n",
+    "Grouping variable that will produce points with different colors. Can be either categorical or numeric, although color mapping will behave differently in latter case.\n",
+    "\n",
+    "sizevector or key in data\n",
+    "Grouping variable that will produce points with different sizes. Can be either categorical or numeric, although size mapping will behave differently in latter case.\n",
+    "\n",
+    "stylevector or key in data\n",
+    "Grouping variable that will produce points with different markers. Can have a numeric dtype but will always be treated as categorical.\n",
+    "\n",
+    "palettestring, list, dict, or matplotlib.colors.Colormap\n",
+    "Method for choosing the colors to use when mapping the hue semantic. String values are passed to color_palette(). List or dict values imply categorical mapping, while a colormap object implies numeric mapping.\n",
+    "\n",
+    "hue_ordervector of strings\n",
+    "Specify the order of processing and plotting for categorical levels of the hue semantic.\n",
+    "\n",
+    "hue_normtuple or matplotlib.colors.Normalize\n",
+    "Either a pair of values that set the normalization range in data units or an object that will map from data units into a [0, 1] interval. Usage implies numeric mapping.\n",
+    "\n",
+    "sizeslist, dict, or tuple\n",
+    "An object that determines how sizes are chosen when size is used. List or dict arguments should provide a size for each unique data value, which forces a categorical interpretation. The argument may also be a min, max tuple.\n",
+    "\n",
+    "size_orderlist\n",
+    "Specified order for appearance of the size variable levels, otherwise they are determined from the data. Not relevant when the size variable is numeric.\n",
+    "\n",
+    "size_normtuple or Normalize object\n",
+    "Normalization in data units for scaling plot objects when the size variable is numeric.\n",
+    "\n",
+    "markersboolean, list, or dictionary\n",
+    "Object determining how to draw the markers for different levels of the style variable. Setting to True will use default markers, or you can pass a list of markers or a dictionary mapping levels of the style variable to markers. Setting to False will draw marker-less lines. Markers are specified as in matplotlib.\n",
+    "\n",
+    "style_orderlist\n",
+    "Specified order for appearance of the style variable levels otherwise they are determined from the data. Not relevant when the style variable is numeric.\n",
+    "\n",
+    "legend“auto”, “brief”, “full”, or False\n",
+    "How to draw the legend. If “brief”, numeric hue and size variables will be represented with a sample of evenly spaced values. If “full”, every group will get an entry in the legend. If “auto”, choose between brief or full representation based on number of levels. If False, no legend data is added and no legend is drawn.\n",
+    "\n",
+    "axmatplotlib.axes.Axes\n",
+    "Pre-existing axes for the plot. Otherwise, call matplotlib.pyplot.gca() internally.\n",
+    "\n",
+    "kwargskey, value mappings\n",
+    "Other keyword arguments are passed down to matplotlib.axes.Axes.scatter()."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
@@ -2699,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2758,7 +2820,7 @@
     "## count = frequency\n",
     "## Creating Histogram for penguins at iland Biscoe and bill length using seaborn\n",
     "\n",
-    "sns.histplot(data=penguins_at_biscoe, x=penguins_at_biscoe['bill_length_mm'], bins=30, hue=['sex','species'])\n",
+    "sns.histplot(data=penguins_at_biscoe, x=penguins_at_biscoe['bill_length_mm'], bins=30, hue='sex')\n",
     "plt.title(\"Seaborn Histogram\")\n",
     "plt.show()\n",
     "\n",
